required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Version 4.99 (CVS HEAD)
-----------------------

 - RFC-27: Added support for label priority (#1619)

 - GD : draw symbols along a line using pixmap symbols (#2121)

 - SVG : Polygons should not be filled if color is not given (#2055)

 - WMS : fixed request with a BBOX and and SLD containing Filter encoding (2079)

 - Initial support for loading entire mapfiles via a string buffer (msLoadMapFromString).

 - SWF : use highlight color from querymap (2074)

 - RFC24: memory management for mapscript (supports: mapObj, layerObj, classObj,
   styleObj)

 - Support for embedding manifests as resources for the VS2005 builds. (bug 2048)
 
 - Changed OGRLayerGetAutoStyle not to pass NULL pointer to GetRGBFromString 
   causing access violation (bug 1950).
 
 - Fix SDE returning the row_id_column multiple times (bug 2040).

 - Fix text outline bug. (bug 2027)

 - Improve error reporting when OWS services are requested but the support
   is not compiled in.  (bug 2025)

 - Fix support for OFFSITE for simple greyscale rasters (bug 2024). 
 
 - [SLD] : Error on last class in raster class names based on the ColorMapEntry
           (bug 1844)

 - [Filter Encoding] : Check if Literal value in Filter is empty (bug 1995)

 - [SLD] : Else filters are now generated at the end of classes (bug 1925)  

 - Enabled setting of a layer tileindex (e.g. map_layername_tileindex) via the 
   CGI program. (bug 1992)

 - Added feature to the CGI to check runtime substitutions against patterns
   defined in layer metadata. (bug 1918)

 - Exposed label point computation to mapscript (bug 1979)

 - [SLD]: use the url as symbol name for external symbols (bug 1985)
